Fix spacing for empty state heading

--- a/src/styles/pages/sites/[site_id]/_recordings.scss
+++ b/src/styles/pages/sites/[site_id]/_recordings.scss
@@ -156,6 +156,10 @@
         display: flex;
         flex: 1;
         padding: 0;
+
+        h4 {
+          margin: 2.5rem 0 0 0;
+        }
       }
 
       .recordings-list {
